# EasyOpenGL

lectureCodes01_Windows/: CMakeLists.txt  main.cpp
lectureCodes01_Windows/application/: application.cpp  application.h
lectureCodes01_Windows/global/: base.h
lectureCodes02_GDI/: main.cpp
lectureCodes02_GDI/global/: base.h
lectureCodes02_GDI/gpu/: gpu.cpp  gpu.h
lectureCodes03_1_ColorLines/: CMakeLists.txt  main.cpp
lectureCodes03_1_ColorLines/gpu/: CMakeLists.txt  gpu.cpp  raster.cpp  raster.h
lectureCodes03_Lines/application/: application.cpp  application.h
lectureCodes03_Lines/global/: base.h
lectureCodes03_Lines/gpu/: frameBuffer.cpp  raster.h
lectureCodes04_Vectors/: CMakeLists.txt  main.cpp
lectureCodes04_Vectors/application/: CMakeLists.txt
lectureCodes04_Vectors/gpu/: frameBuffer.h  gpu.cpp  gpu.h  raster.cpp
lectureCodes04_Vectors/math/: CMakeLists.txt  mathFunction.h  vector.h
lectureCodes05_Triangles/: CMakeLists.txt  main.cpp
lectureCodes05_Triangles/application/: application.cpp  application.h
lectureCodes05_Triangles/global/: base.h
lectureCodes05_Triangles/gpu/: frameBuffer.cpp  frameBuffer.h  gpu.cpp  gpu.h  raster.cpp  raster.h
lectureCodes05_Triangles/math/: math.h  mathFunction.h  vector.h
